fix needless horizontal scrollbars

--- a/mdw-hub/web/css/mdw-admin.css
+++ b/mdw-hub/web/css/mdw-admin.css
@@ -45,7 +45,6 @@
 }
 .mdw-tabs-space {
   width: 100%;
-  min-width: 720px;
 }
 .mdw-sidebar {
   float: left;
